[gd_scene load_steps=98 format=3 uid="uid://pnmlujjg3pkh"]

[ext_resource type="Script" path="res://Scenes/Player2.gd" id="1_fpjlp"]
[ext_resource type="Texture2D" uid="uid://d30ww163urhdv" path="res://Assets/Images/SpriteSheet4bobpayer2.png" id="3_78ask"]
[ext_resource type="Texture2D" uid="uid://o5ysqnhpcwsj" path="res://Assets/Images/SpriteSheet4bob.png" id="3_v0dob"]
[ext_resource type="Texture2D" uid="uid://cg5wtf8culxut" path="res://Assets/Images/SpriteSheet5bob.png" id="4_73l82"]
[ext_resource type="AudioStream" uid="uid://bdrll3qc3mn2r" path="res://Sounds/x1.ogg" id="5_3bm2i"]
[ext_resource type="AudioStream" uid="uid://d00d1mrkuiv67" path="res://Sounds/untitled.ogg" id="6_c7spa"]
[ext_resource type="Texture2D" uid="uid://b5q6yh74hytco" path="res://Assets/Images/SpriteSheet4bobpayer2 - tom.png" id="10_e1aw6"]
[ext_resource type="Texture2D" uid="uid://ck425h4b4u0wf" path="res://Assets/Images/SpriteSheet4bobpayer2 - amy.png" id="11_g0r5i"]
[ext_resource type="Texture2D" uid="uid://b2k3ixwpq4wah" path="res://Assets/Images/GUI.png" id="11_jg5jl"]
[ext_resource type="Script" path="res://Scenes/Camera2D2pstufff.gd" id="12_es3lv"]
[ext_resource type="PackedScene" uid="uid://nk7joy7np4ua" path="res://Inventory/Inventory(s)/inventory_ui.tscn" id="12_ocpih"]
[ext_resource type="PackedScene" uid="uid://c82k18yq1rppw" path="res://Scenes/Sign.tscn" id="13_qnr2c"]
[ext_resource type="PackedScene" uid="uid://ndh0yu3nrg21" path="res://Scenes/Map.tscn" id="13_u8efp"]
[ext_resource type="Texture2D" uid="uid://blobgurfrke1m" path="res://Assets/Images/GUI/Arrowbut.png" id="14_1lj3e"]
[ext_resource type="PackedScene" uid="uid://dmtxdbc0norax" path="res://Scenes/Debug_mode.tscn" id="15_uwhv2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_03i8b"]
atlas = ExtResource("3_v0dob")
region = Rect2(72, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ei4s"]
atlas = ExtResource("3_v0dob")
region = Rect2(80, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo3cs"]
atlas = ExtResource("3_v0dob")
region = Rect2(0, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_n70ba"]
atlas = ExtResource("3_v0dob")
region = Rect2(8, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_60oh2"]
atlas = ExtResource("3_v0dob")
region = Rect2(16, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ysdw"]
atlas = ExtResource("3_v0dob")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivyq4"]
atlas = ExtResource("3_v0dob")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_he71t"]
atlas = ExtResource("3_v0dob")
region = Rect2(32, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucadp"]
atlas = ExtResource("3_v0dob")
region = Rect2(40, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds81g"]
atlas = ExtResource("3_v0dob")
region = Rect2(48, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_u53pb"]
atlas = ExtResource("3_v0dob")
region = Rect2(56, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_pieif"]
atlas = ExtResource("3_v0dob")
region = Rect2(64, 0, 8, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_yv8tl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03i8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ei4s")
}],
"loop": true,
"name": &"Shocked",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo3cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n70ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60oh2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ysdw")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivyq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he71t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucadp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds81g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u53pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pieif")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2wsyp"]
radius = 3.0
height = 14.0

[sub_resource type="Animation" id="Animation_1u84o"]
resource_name = "Health1"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("@SubViewport@9288/Player2/Player/Gui:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_yvd21"]
resource_name = "Health2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("@SubViewport@9288/Player2/Player/Gui:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hvh2l"]
resource_name = "Health3"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("@SubViewport@9288/Player2/Player/Gui:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2v0de"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("@SubViewport@9288/Player2/Player/Gui:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r158o"]
_data = {
"Health1": SubResource("Animation_1u84o"),
"Health2": SubResource("Animation_yvd21"),
"Health3": SubResource("Animation_hvh2l"),
"RESET": SubResource("Animation_2v0de")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gtso6"]
atlas = ExtResource("3_v0dob")
region = Rect2(72, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ws6"]
atlas = ExtResource("3_v0dob")
region = Rect2(80, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaaro"]
atlas = ExtResource("3_v0dob")
region = Rect2(0, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh67u"]
atlas = ExtResource("3_v0dob")
region = Rect2(8, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh58n"]
atlas = ExtResource("3_v0dob")
region = Rect2(16, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykhgc"]
atlas = ExtResource("3_v0dob")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1e8q"]
atlas = ExtResource("3_v0dob")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_62k1q"]
atlas = ExtResource("3_v0dob")
region = Rect2(32, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tih1"]
atlas = ExtResource("3_v0dob")
region = Rect2(40, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0keyi"]
atlas = ExtResource("3_v0dob")
region = Rect2(48, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg4cr"]
atlas = ExtResource("3_v0dob")
region = Rect2(56, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_i56lr"]
atlas = ExtResource("3_v0dob")
region = Rect2(64, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_cek5p"]
atlas = ExtResource("4_73l82")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gjla"]
atlas = ExtResource("4_73l82")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao8hn"]
atlas = ExtResource("4_73l82")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e62hc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtso6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00ws6")
}],
"loop": true,
"name": &"Shock",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaaro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh67u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh58n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykhgc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1e8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62k1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tih1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0keyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg4cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i56lr")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cek5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gjla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao8hn")
}],
"loop": true,
"name": &"slash",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_k2xef"]
atlas = ExtResource("3_v0dob")
region = Rect2(72, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvk2e"]
atlas = ExtResource("3_v0dob")
region = Rect2(80, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ykg5"]
atlas = ExtResource("3_78ask")
region = Rect2(0, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpvur"]
atlas = ExtResource("3_78ask")
region = Rect2(8, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_61v0s"]
atlas = ExtResource("3_78ask")
region = Rect2(16, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mspw"]
atlas = ExtResource("3_78ask")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjd18"]
atlas = ExtResource("3_78ask")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxv5d"]
atlas = ExtResource("3_78ask")
region = Rect2(32, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_guxxa"]
atlas = ExtResource("3_78ask")
region = Rect2(40, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk758"]
atlas = ExtResource("3_78ask")
region = Rect2(48, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmlvg"]
atlas = ExtResource("3_78ask")
region = Rect2(56, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3n0v"]
atlas = ExtResource("3_78ask")
region = Rect2(64, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx5sm"]
atlas = ExtResource("4_73l82")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxx8g"]
atlas = ExtResource("4_73l82")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fdn"]
atlas = ExtResource("4_73l82")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wv68j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2xef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvk2e")
}],
"loop": true,
"name": &"Shock",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ykg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpvur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61v0s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mspw")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjd18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxv5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guxxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk758")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmlvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3n0v")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx5sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxx8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fdn")
}],
"loop": true,
"name": &"slash",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dn0ya"]
atlas = ExtResource("10_e1aw6")
region = Rect2(0, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg8q1"]
atlas = ExtResource("10_e1aw6")
region = Rect2(8, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_exgp6"]
atlas = ExtResource("10_e1aw6")
region = Rect2(16, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_f01bf"]
atlas = ExtResource("10_e1aw6")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_twrah"]
atlas = ExtResource("10_e1aw6")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa8cm"]
atlas = ExtResource("10_e1aw6")
region = Rect2(32, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_nldbl"]
atlas = ExtResource("10_e1aw6")
region = Rect2(40, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhpc6"]
atlas = ExtResource("10_e1aw6")
region = Rect2(48, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_wun5n"]
atlas = ExtResource("10_e1aw6")
region = Rect2(56, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvyl4"]
atlas = ExtResource("10_e1aw6")
region = Rect2(64, 0, 8, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwpej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn0ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg8q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exgp6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f01bf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twrah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa8cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nldbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhpc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wun5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvyl4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3g5y3"]
atlas = ExtResource("11_g0r5i")
region = Rect2(0, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6wo3"]
atlas = ExtResource("11_g0r5i")
region = Rect2(8, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayg4m"]
atlas = ExtResource("11_g0r5i")
region = Rect2(16, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k4cv"]
atlas = ExtResource("11_g0r5i")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g3kr"]
atlas = ExtResource("11_g0r5i")
region = Rect2(24, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbci3"]
atlas = ExtResource("11_g0r5i")
region = Rect2(32, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_imc2w"]
atlas = ExtResource("11_g0r5i")
region = Rect2(40, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfk71"]
atlas = ExtResource("11_g0r5i")
region = Rect2(48, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygvsr"]
atlas = ExtResource("11_g0r5i")
region = Rect2(56, 0, 8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw8sp"]
atlas = ExtResource("11_g0r5i")
region = Rect2(64, 0, 8, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_r0e5g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g5y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6wo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayg4m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k4cv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g3kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imc2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfk71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygvsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw8sp")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3lia8"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Camera2D/CanvasLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 999)]
}

[sub_resource type="Animation" id="Animation_31plk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Camera2D/CanvasLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4rtkt"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Camera2D/CanvasLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 999), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icdk2"]
_data = {
"Hide": SubResource("Animation_3lia8"),
"RESET": SubResource("Animation_31plk"),
"Show": SubResource("Animation_4rtkt")
}

[sub_resource type="Animation" id="Animation_kx1mk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_3n01b"]
resource_name = "idle"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5sfu6"]
resource_name = "jump"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_7m1o4"]
resource_name = "run"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nipdh"]
_data = {
"RESET": SubResource("Animation_kx1mk"),
"idle": SubResource("Animation_3n01b"),
"jump": SubResource("Animation_5sfu6"),
"run": SubResource("Animation_7m1o4")
}

[node name="Player2" type="Node2D"]
position = Vector2(2, 0)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(0, 17)
collision_layer = 2
collision_mask = 2
platform_on_leave = 2
platform_floor_layers = 4294967042
platform_wall_layers = 2
script = ExtResource("1_fpjlp")

[node name="Char1" type="AnimatedSprite2D" parent="Player"]
visible = false
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_yv8tl")
animation = &"Shocked"
autoplay = "Shocked"
frame_progress = 0.651253

[node name="Char878" type="AnimatedSprite2D" parent="Player"]
visible = false
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_yv8tl")
animation = &"Shocked"
autoplay = "Shocked"
frame_progress = 0.316554

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(1, 0)
stream = ExtResource("5_3bm2i")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(0, -2)
stream = ExtResource("6_c7spa")

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2(0, -17)

[node name="What" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CapsuleShape2D_2wsyp")
debug_color = Color(0.964196, 0.190676, 1.92523e-07, 0.42)

[node name="Area2D2" type="Area2D" parent="Player"]
position = Vector2(0, -17)

[node name="What" type="CollisionShape2D" parent="Player/Area2D2"]
shape = SubResource("CapsuleShape2D_2wsyp")
debug_color = Color(0.964196, 0.190676, 1.92523e-07, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_2wsyp")

[node name="Marker2D" type="Marker2D" parent="Player"]
position = Vector2(0, -17)

[node name="Gui" type="Sprite2D" parent="Player"]
visible = false
z_index = 99
position = Vector2(-96, -92)
texture = ExtResource("11_jg5jl")
hframes = 10
vframes = 17
frame = 2

[node name="Health_visual_manager" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_r158o")
}

[node name="InventoryUI" parent="Player" instance=ExtResource("12_ocpih")]
visible = false
offset_left = -66.0
offset_top = -92.0
offset_right = 1086.0
offset_bottom = 556.0

[node name="CanvasLayer2" type="CanvasLayer" parent="Player"]

[node name="CenterContainer" type="CenterContainer" parent="Player/CanvasLayer2"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -444.0
offset_top = -249.0
offset_right = -263.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.92264, 4.92264)
use_top_left = true

[node name="Map" parent="Player/CanvasLayer2/CenterContainer" instance=ExtResource("13_u8efp")]
z_index = 4096
layout_direction = 2
layout_mode = 2

[node name="Label" type="Label" parent="Player"]
visible = false
z_index = 4096
offset_left = -110.0
offset_top = -86.0
offset_right = -70.0
offset_bottom = -63.0
text = "?????"

[node name="Bob" type="AnimatedSprite2D" parent="Player"]
visible = false
texture_filter = 1
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_e62hc")
animation = &"idle"

[node name="Joe" type="AnimatedSprite2D" parent="Player"]
visible = false
texture_filter = 1
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_wv68j")
animation = &"run"

[node name="Tom" type="AnimatedSprite2D" parent="Player"]
visible = false
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_fwpej")
animation = &"run"

[node name="Amy" type="AnimatedSprite2D" parent="Player"]
visible = false
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_r0e5g")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -22)
enabled = false
zoom = Vector2(5, 5)
limit_left = -464
limit_top = -2700
limit_right = 794
limit_bottom = 110
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
editor_draw_limits = true
script = ExtResource("12_es3lv")

[node name="Sign" parent="Player/Camera2D" instance=ExtResource("13_qnr2c")]
offset_left = -67.0
offset_top = -56.0
offset_right = 989.0
offset_bottom = 211.0
scale = Vector2(0.121273, 0.129529)
metadata/_edit_use_anchors_ = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Player/Camera2D"]
visible = false
z_index = 99
position = Vector2(247, 35)
rotation = -1.57079
texture_normal = ExtResource("14_1lj3e")
action = "ui_left"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Player/Camera2D"]
visible = false
z_index = 99
position = Vector2(282, 19)
rotation = 1.57079
texture_normal = ExtResource("14_1lj3e")
action = "ui_right"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="Player/Camera2D"]
visible = false
z_index = 99
position = Vector2(454, 18)
texture_normal = ExtResource("14_1lj3e")
action = "jump"
visibility_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="Song playing" type="Label" parent="Player/Camera2D/CanvasLayer"]
offset_left = 15.0
offset_top = 583.0
offset_right = 80.0
offset_bottom = 628.0
theme_override_font_sizes/font_size = 32
text = "Test"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Player/Camera2D/CanvasLayer"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_icdk2")
}

[node name="Button" type="Button" parent="Player/Camera2D/CanvasLayer"]
visible = false
offset_left = 20.0
offset_top = 545.0
offset_right = 69.0
offset_bottom = 576.0
text = "Mute"

[node name="Control" parent="Player/Camera2D" instance=ExtResource("15_uwhv2")]
visible = true
offset_left = -1032.0
offset_top = -36.0
offset_right = -1032.0
offset_bottom = -36.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_v0dob")
hframes = 9
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nipdh")
}

[connection signal="area_entered" from="Player/Area2D" to="Player" method="_on_area_2d_area_entered"]
[connection signal="body_shape_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_shape_entered"]
[connection signal="area_shape_entered" from="Player/Area2D2" to="Player" method="_on_area_2d_2_area_shape_entered"]
[connection signal="body_shape_entered" from="Player/Area2D2" to="Player" method="_on_area_2d_2_body_shape_entered"]
